...
              a.flex_1,
              a.align_start,
              {marginLeft: big ? -2 : -6},
              replyDisabled ? {opacity: 0.6} : undefined,
            ]}>
            <PostControlButton
              testID="replyBtn"
              onPress={
                !replyDisabled
                  ? () => requireAuth(() => onPressReply())
                  : undefined
              }
              label={_(
...
            hitSlop={{
              left: secondaryControlSpacingStyles.gap / 2,
              right: secondaryControlSpacingStyles.gap / 2,
            }}
          />
          <PostMenuButton
            testID="postDropdownBtn"
            post={post}
            postFeedContext={feedContext}
            postReqId={reqId}
            big={big}
            richText={richText}
            timestamp={post.indexedAt}
...
