...
        <Menu.Root>
          <Menu.Trigger label={_(msg`Compose`)}>
            {props => {
              return (
                <FAB
                  {...props.props}
                  testID="composeFAB"
                  icon={
                    <ComposeIcon2 strokeWidth={1.5} size={29} style={s.white} />
                  }
                  accessibilityRole="button"
                  accessibilityLabel={_(
                    msg({message: `New post`, context: 'action'}),
...
